--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "start": "nx serve",
+    "start:dev": "nx serve",
     "build": "nx build",
     "test": "nx test"
   },
   "private": true,
   "dependencies": {
-    "axios": "^1.0.0",
+    "axios": "^1.4.0",
     "express": "~4.18.1",
     "tslib": "^2.3.0"
   },
