--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
   },
   "private": true,
   "dependencies": {
+    "@prisma/client": "^5.0.0",
+    "@types/uuid": "^9.0.2",
     "axios": "^1.4.0",
+    "bcrypt": "^5.1.0",
+    "dotenv": "^16.3.1",
     "express": "~4.18.1",
-    "tslib": "^2.3.0"
+    "jsonwebtoken": "^9.0.1",
+    "prisma": "^5.0.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@nx/esbuild": "16.5.1",
@@ -21,8 +27,10 @@
     "@nx/linter": "16.5.1",
     "@nx/node": "16.5.1",
     "@nx/workspace": "16.5.1",
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "~4.17.13",
     "@types/jest": "^29.4.0",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "~18.7.1",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
